<resources>
    <string name="app_name">দাম্পত্য জীবনের সকল দোয়া</string>

    <string name="dua0">

        নিজের বিবাহ দ্রুত ও সহজে হবার জন্য এই দুটি দোয়া পড়তে হবে

        \n\n

        رَبِّىٓ أَن يَهْدِيَنِى سَوَآءَ ٱلسَّبِيلِ

        \n\n

        উচ্চারণঃ রব্বি ইন্নি ইয়াহদানিইইই সাওয়াআআআআ-আস-সাবিইইইল ।

        \n \n

        অর্থ: আশা করা যায় আমার পালনকর্তা আমাকে সরল পথ দেখাবেন। (আল-কাসাস আয়াত:২২)

        \n\n\n

        رَبِّ إِنِّى لِمَآ أَنزَلْتَ إِلَىَّ مِنْ خَيْرٍ فَقِيرٌ

        \n\n

        উচ্চারণঃ রব্বি ইন্নিইইই লিমাআআআআ আনঝালতা ইলাইয়া মিন খইরিনন্ন ফাকিইইর ।

        \n\n

        অর্থ: হে আমার পালনকর্তা, তুমি আমার প্রতি যে অনুগ্রহ নাযিল করবে, আমি তার মুখাপেক্ষী। (আল-কাসাস আয়াত:২৪)


    </string>


    <string name="dua1">

        কারো বিবাহর সংবাদ পেলে তাদের জন্য এই দোয়া পরতে হয়

        \n\n

        بَارَكَ اللهُ لَكَ وَ بَارَكَ اللهُ عَلَيْكَ وَجَمَعَ بَيْنَكُمَا فِيْ خَيْرٍ

        \n\n

        অর্থ: আল্লাহ পাক তোমাকে বরকতপূর্ণ করুন এবং তোমার উপর বরকত অবতীর্ণ করুণ এবং তোমাদের পরস্পরের মিলনকে মঙ্গল করুণ।

    </string>


    <string name="dua2">

        বাসর রাতে স্ত্রীর কপালের উপরিস্থিত চুল ধরে বিসমিল্লাহ বলে এই দুআ পাঠ করা সুন্নাত

        \n\n

        اَللّهُمَّ إِنّيْ اَسْأَلُكَ خَيْرَهَا وَخَيْرَ مَا جُبِلَتْ عَلَيْهِ, وَأَعُوْذُ بِكَ مِنْ شَرِّهَا وَشَرِّ مَا جُبِلَتْ عَلَيْهِ

        \n\n

        উচ্চারণঃ আল্লাহুম্মা ইন্নি আসআলুকা খাইরাহা ওয়া খাইরা মা যুবিলাত আলাইহি, ওয়া আউযুবিকা মিন শাররি হা ওয়া শাররি মা যুবিলাত আলাইহি

        \n\n

        অর্থ: হে আল্লাহ! আমি তোমার নিকট ইহার কল্যাণ ও বরকত এবং ইহার স্বভাবের কল্যাণ ও বরকত কামনা করিতেছি এবং তাহার অনিষ্ঠ হইতে ও তাহার সৃষ্টিগত স্বভাবের অনিষ্ঠ হইতে পানাহ চাইতেছি।

    </string>



    <string name="dua3">

         সংগমের শুরুতে এই দোয়া পড়বেঃ

        \n\n

        بِسْمِ اللهِ اللّهُمَّ جَنِّبْنَا الشَّيْطَانَ و جَنِّبِ الشَّيْطَانَ مَا رَزَقْتَنَا

        \n\n

        উচ্চারণঃ বিসমিল্লাহি আল্লাহুম্মা জান্নিবনাশ শাইতানা ওয়া জান্নিবিশ শাইতানা মা রাযাকতানা।

        \n \n

        অর্থঃ আমি আল্লাহর নাম নিয়ে এই কাজ আরম্ভ করছি। হে আল্লাহ, শয়তানকে আমাদের থেকে দূরে রাখ এবং যে সন্তান তুমি আমাদের দান করবে তার থেকেও শয়তানকে দূরে রাখ।

    </string>


    <string name="dua4">

        বীর্যপাতের সময় এই দুআটি পড়বেঃ

        \n\n

        اللّهُمَّ لآ تَجْعَلْ لِلشَّيْطَانِ فِيْمَا رَزَقْتَنِيْ نَصِيْبًا

        \n\n

        উচ্চারণঃ আল্লাহুম্মা লা তাজআল লিশ্শাইতানি ফিমা রাযাকতানী নাসীবান।

        \n\n

        অর্থঃ হে আল্লাহ, যে সন্তান তুমি আমাদেরকে দান করবে তার মধ্যে শয়তানের কোন অংশ রেখ না।

    </string>


    <string name="dua5">

       رَبِّ لَا تَذَرْنِي فَرْدًا وَأَنتَ خَيْرُ الْوَارِثِينَ

        \n\n

        উচ্চারণঃ রব্বি লা-তার্যানী র্ফাদাঁও অআন্তা খাইরুল্ ওয়ারিছীন্।

        \n\n

        অর্থঃ হে আমার পালনকর্তা আমাকে একা রেখো না। তুমি তো উত্তম ওয়ারিস। [ সুরা আম্বিয়া আয়াত:৮৯ ]

    </string>


    <string name="dua6">

        رَبِّ هَبْ لِي مِنْ لَدُنْكَ ذُرِّيَّةً طَيِّبَةً إِنَّكَ سَمِيعُ الدُّعَاءِ

        \n\n

        উচ্চারণঃ রাব্বি হাবলি মিল্লাদুনকা জুররিয়্যাতান ত্বাইয়্যিবাতান, ইন্নাকা সামিউ’দ দুআ’ই।

        \n\n

        অর্থঃ হে আমাদের প্রভু! আপনার নিকট থেকে আমাকে পূত-পবিত্র সন্তান দান করুন। নিশ্চয় আপনি প্রার্থনা কবুলকারী। (সূরা আল-ইমরান: আয়াত ৩৮)

    </string>


    <string name="dua7">

        رَبِّ هَبْ لِي مِنَ الصَّالِحِينَ

        \n\n

        উচ্চারণঃ রব্বি হাব্লি মিনাস সলেহিন ।

        \n\n

        অর্থঃ  হে পরওয়ারদিগার! আমাকে একটি সৎকর্মশীল পুত্র সন্তান দাও৷” (সুরা সফফাত ১০০)

    </string>


    <string name="dua8">

        رَبِّ إِنِّى نَذَرْتُ لَكَ مَا فِى بَطْنِى مُحَرَّرًا فَتَقَبَّلْ مِنِّىٓۖ إِنَّكَ أَنتَ ٱلسَّمِيعُ ٱلْعَلِيمُ

        \n\n

        উচ্চারণঃ রব্বি ইন্নি নাযারতু লাকা মা ফিইই বাতনিইই মুহার-রা-রন্ন ফাতাকব্বাল মিন্নিইইইই ইন্নাকা আন্তাস-সামিঊল আলিম ।

        \n\n

        অর্থঃ  হে আমার পালনকর্তা! আমার গর্ভে যা রয়েছে আমি তাকে তোমার নামে উৎসর্গ করলাম সবার কাছ থেকে মুক্ত রেখে। আমার পক্ষ থেকে তুমি তাকে কবুল করে নাও, নিশ্চয়ই তুমি শ্রবণকারী, সর্বজ্ঞাত। (সূরা আল-ইমরান: আয়াত ৩৫)

    </string>


    <string name="dua9">

        رَبَّنَا هَبْ لَنَا مِنْ أَزْوَاجِنَا وَذُرِّيَّاتِنَا قُرَّةَ أَعْيُنٍ وَاجْعَلْنَا لِلْمُتَّقِينَ إِمَامًا

        \n\n

        উচ্চারণঃ রব্বানা-হাবলানা-মিন্ আয্ওয়া-জ্বিনা-অ র্যুরিয়্যা-তিনা-কুররতা আ’ইয়ুনিঁও অজ্ব্’আল্না-লিল্মুত্তাকীনা ইমা-মা ।

        \n\n

        অর্থঃ  হে আমাদের প্রতিপালক! আমাদের স্ত্রী ও সন্তান-সন্ততিদের আমাদের জন্য নয়ন প্রীতিকর করো এবং আমাদেরকে সংযমীদের আদর্শস্বরূপ করো ।  (সুরা ফুরকান: আয়াত ৭৪)

    </string>

</resources>
