<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/accent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dua0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua7"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua8"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/dua9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/dua9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />







    </LinearLayout>


</ScrollView>
